[build-system]
requires = ["hatchling>=1.11.1", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "snakedoc"
description = 'A Sphinx extension for Snakemake'
readme = "README.rst"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Simon Mutch", email = "smutch@unimelb.edu.au" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
"snakemake>=7.6.2",
"Sphinx>=5,<7",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/smutch/snakedoc#readme"
Issues = "https://github.com/smutch/snakedoc/issues"
Source = "https://github.com/smutch/snakedoc"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "snakedoc/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]

[tool.hatch.envs.default]
dependencies = [
  "pytest>=7.1.2",
  "pytest-cov>=3.0.0",
  "pytest-regressions>=2.3.1",
  "beautifulsoup4>=4.11.1",
  "pre-commit>=2.19.0",
  "sphinx-immaterial>=0.8.0",
  "ipdb>=0.13.9",
  "myst-parser>=0.18.1"
]
env_vars.PYTHONBREAKPOINT = "ipdb.set_trace"
scripts.cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=snakedoc"
scripts.no-cov = "cov --no-cov"
scripts.regen-expected = "pytest --force-regen"
scripts.docs = "sphinx-build docs/source docs/build/html"

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "isort>=5.10.1",
  "black>=22.3.0",
]
scripts.style = [
    "isort --check-only --diff {args:.}",
    "black --check --diff {args:.}",
]
scripts.fmt = [
  "isort {args:.}",
  "black {args:.}",
  "style"
]

[tool.coverage]
run.branch = true
run.parallel = true
run.omit = [
  "snakedoc/__about__.py",
]
report.exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.codecov]
extra-dependencies = [
    "codecov"
]
scripts.report = [
    "pytest --cov-config=pyproject.toml --cov=snakedoc",
    "codecov"
]

[tool.black]
line-length = 120
skip_string_normalization = true

[tool.isort]
profile = "black"
skip = [".hatch-data"]  # this is where we put the hatch data directory in the CI
